fixed call to action mobile

--- a/css/style.css
+++ b/css/style.css
@@ -339,6 +339,9 @@ header.masthead {
     .arrow {
         display: none;
     }
+    #my-stack h3 {
+        margin-bottom: 0 !important;
+    }
     #my-stack .middle-row {
         display: flex;
         justify-content: center;
@@ -346,7 +349,7 @@ header.masthead {
     }
     #my-stack .stack {
         width: 40%;
-        margin: 0 0.3rem !important;
+        margin: 0.3rem 0.3rem !important;
     }
     #my-stack .stack::after {
         content: '';
@@ -356,9 +359,21 @@ header.masthead {
         display: none;
     }
     #portfolio {
-        margin-top: 5rem;
+        margin-top: 0rem;
     }
     .service-card {
         margin: 0 1rem;
+    }
+
+    .call-for-action {
+        margin: 0 1rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    .call-for-action button {
+        margin-top: 1rem;
+        width: 100%;
     }
 }
